# StockContrlolSystem

./: .gitignore  CMakeLists.txt  README.md
StockControlSystem/inc/: warehousecontrol.h
StockControlSystem/scr/: main.cpp  warehousecontrol.cpp
StockControlSystem/ui/: warehousecontrol.ui
